<?php

use App\Models\TaskStatus;
use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

class CreateTaskStatusesTable extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('task_statuses', function (Blueprint $table) {
            $table->id();
            $table->string('name', 20);
        });

        Schema::table('tasks', function(Blueprint $table) {
            $table->foreign('status_id')
                ->references('id')->on('task_statuses')
                ->onDelete('cascade');
        });

        $statuses = [
            'To Do',
            'In Progress',
            'In Review',
            'Done',
        ];

        foreach ($statuses as $status) {
            TaskStatus::create([
                'name' => $status
            ]);
        }
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('task_statuses');
    }
}
